--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "caffeinated/modules": "^4.2",
+        "guzzlehttp/guzzle": "~6",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0"
     },
